--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,58 @@ img{
   color: #fff;
   background-color: black;
 }
+.list_heading{
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+.dropdown_menu{
+  position: absolute;
+  display: flex;
+  top: 50px;
+  right: -230px;
+  width: 700px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.account_section,
+.wealth_section,
+.payments_section,
+.extras_section{
+  flex-basis: 25%;
+  margin-left: 20px;
+}
+
+.position_relative{
+  position: relative;
+}
+.dropdown_menu>div{
+  margin-right: 10px;
+}
+h3{
+  color: rgb(220, 225, 229);
+  font-size: 10px;
+  margin-left: 10px;
+}
+.circle{
+  height: 25px;
+  width: 25px;
+  background-color: rgb(206, 213, 219);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.circle>i{
+  font-size: 12px;
+  color: #fff;
+}
+.dropdown_menu a{
+  margin: 0;
+}
+.dropdown_menu li{
+  margin: 15px 0;
+}
+.one{
+  display: none;
+}
