--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ img{
   width: 700px;
   background-color: #fff;
   border-radius: 10px;
+  display: none;
 }
 .account_section,
 .wealth_section,
@@ -108,9 +109,14 @@ h3{
 .dropdown_menu a{
   margin: 0;
 }
-.dropdown_menu li{
+.dropdown_menu li,
+.dropdown_menu_two li{
   margin: 15px 0;
 }
-.one{
+.dropdown_menu_two{
+  position: absolute;
+  background-color: #fff;
+  top: 50px;
+  border-radius: 10px;
   display: none;
 }
