--- a/css/style.css
+++ b/css/style.css
@@ -4,137 +4,64 @@
   box-sizing: border-box;
 }
 header{
-  height: 100px;
-  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-main{
-  height: calc(100vh - 200px);
-  background-color: lightblue;
-}
-footer{
-  height: 100px;
-  background-color: lightgray;
-}
-.rigth_section{
-  margin-left: 20px;
-  align-items: center;
-}
-.left_section{
-  margin-right: 20px;
-}
-.rigth_section,
-.right_links_list,
-.left_section,
-.left_links_list{
-  display: flex;
-}
-.left_links_list{
-  align-items: center;
-}
-li{
-  list-style: none;
-}
-a{
-  text-decoration: none;
-  margin: 20px;
-  color: rgb(140, 142, 143);
-}
-button{
-  margin: 0 10px;
-}
-img{
-  width: 25px;
-}
-.left_button,
-.rigth_button{
-  padding: 15px 20px;
-  border-radius: 10px;
-  border: none;
-  font-weight: 600;
-}
-.rigth_button{
-  color: #fff;
-  background-color: black;
-}
-.list_heading{
-  display: flex;
-  align-items: center;
-  margin: 10px 0;
-}
-.account_section,
-.wealth_section,
-.payments_section,
-.extras_section{
-  flex-basis: 25%;
-  margin-left: 20px;
+  padding: 20px 0;
 }
 
-.position_relative{
-  position: relative;
+.left_nav_section img{
+  width: 30px;
 }
-.dropdown_menu>div{
-  margin-right: 10px;
-}
-h3{
-  color: rgb(220, 225, 229);
-  font-size: 10px;
-  margin-left: 10px;
-}
-.circle{
-  height: 25px;
-  width: 25px;
-  background-color: rgb(206, 213, 219);
-  border-radius: 50%;
+
+.left_nav_ul,
+.right_nav_ul{
   display: flex;
-  justify-content: center;
   align-items: center;
+  list-style: none;
 }
-.circle>i{
-  font-size: 12px;
+
+.left_nav_ul li,
+.right_nav_ul li{
+  margin: 0 15px;
+}
+
+.left_nav_ul a,
+.right_nav_ul a{
+  text-decoration: none;
+  color: rgb(140, 142, 143);
+}
+
+.button{
+  padding: 10px 25px;
+  border: 1px solid transparent;
+  border-radius: 10px;
+}
+
+.right_nav_section li .grey{
+  background-color: rgb(240, 240, 240);
+  color: black;
+}
+
+.right_nav_section li .black{
+  background-color: black;
   color: #fff;
 }
-.dropdown_menu a{
-  margin: 0;
+
+.right_nav_ul{
+  position: relative;
 }
-.dropdown_menu li,
-.dropdown_menu_two li,
-.dropdown_menu_three li,
-.dropdown_menu_four li{
-  margin: 15px 0;
-}
+
 .dropdown_menu{
   position: absolute;
-  display: flex;
-  top: 50px;
-  right: -230px;
-  width: 700px;
-  background-color: #fff;
+  list-style: none;
+  background-color: rgb(240, 240, 240);
   border-radius: 10px;
+  padding: 10px;
+  margin-top: 20px;
   display: none;
 }
-.dropdown_menu_two{
-  position: absolute;
-  background-color: #fff;
-  top: 50px;
-  border-radius: 10px;
-  display: none;
-}
-.dropdown_menu_three{
-  width: 180px;
-  position: absolute;
-  background-color: #fff;
-  top: 50px;
-  border-radius: 10px;
-  display: none;
-}
-.dropdown_menu_four{
-  position: absolute;
-  top: 50px;
-  background-color: #fff;
-  border-radius: 10px;
-  width: 150px;
-  display: none;
+
+.dropdown_menu li{
+  margin: 10px 0;
 }
